<resources>
    <string name="app_name">NetflixCloneApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title bottom nav menu itens-->
    <string name="menu_inicio">Início</string>
    <string name="menu_add">Add</string>
    <string name="menu_busca">Busca</string>
    <string name="menu_breve">Breve</string>
    <string name="menu_downloads">Downloads</string>

    <string name="text_duracao">%s min</string>
</resources>